<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="input_a_name">please input a name</string>
    <string name="ok">ok</string>
    <string name="video_delete_success">video delete success</string>
    <string name="video_delete_failed">video delete failed</string>
    <string name="delete_tips">are you sure to delete?</string>
    <string name="nodata">no data found</string>
    <string name="rename_failed">rename failed</string>
    <string name="encode">编码</string>
    <string name="app_name">视频压缩器</string>
    <string name="app_description">简洁极致的压缩工具</string>
    <string name="search">搜索</string>
    <string name="cancel">取消</string>
    <string name="information">Information</string>
    <string name="notification_channel_id">squeeze_video</string>
    <string name="notification_title">App is squeezing your videos.</string>
    <string name="notification_content">Click to see details</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="rate_us">评价</string>
    <string name="rate_us_tip">如果你喜欢我们的话，请给予我们5星好评。谢谢！</string>
    <string name="here_s_your_5_stars">5星好评</string>
    <string name="four_stars">1-4 星</string>
    <string name="privacy_policy">隐私策略</string>
    <string name="terms_of_service">服务条款</string>
    <string name="contacts">联系方式</string>
    <string name="setting_title">设置</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>
    <string name="info">信息</string>
    <string name="ver">版本</string>
    <string name="if_play_style">&#xe67a; \Play</string>
    <string name="if_info_style">&#xe77e; \Info</string>
    <string name="if_delete_style">&#xe67e; \Delete</string>
    <string name="if_rename_style">&#xe62e; \Rename</string>
    <string name="if_coder_style">&#xe6bb; \Coder</string>
    <string name="if_resize_style">&#xe720; \Resize</string>
    <string name="origin_file">Origin File</string>
    <string name="squeezed_file">Squeezed File</string>
    <string name="squeezed_option">Squeeze Option</string>
</resources>