<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_setting_rate_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftText="@string/rate_us">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_setting_update"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingBottom="3dp"
            android:text="Thanks"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:visibility="gone"
            tools:ignore="HardcodedText" />
    </com.hjq.widget.layout.SettingBar>


    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_setting_contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/contacts">


    </com.hjq.widget.layout.SettingBar>

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_setting_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftText="@string/privacy_policy"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_setting_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/terms_of_service"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:bar_leftText="@string/setting_about"
        app:bar_rightIcon="@drawable/ico_go_black" />


    <com.hjq.widget.layout.SettingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:bar_leftText="@string/setting_cache"
        app:bar_rightIcon="@drawable/ico_go_black" />

    <com.hjq.widget.layout.SettingBar
        android:id="@+id/sb_setting_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:visibility="gone"
        app:bar_leftColor="@color/color_e91e63_material"
        app:bar_leftText="@string/setting_exit" />

</LinearLayout>