<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_gravity="center"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_rate_us_dialog"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:src="@drawable/bg_rate_us" />

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|right"
                    android:layout_margin="13dp"
                    android:drawableLeft="@drawable/ic_close_floating"
                    android:drawablePadding="2dp"
                    android:textColor="#ff434343"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/rate_us"
                android:textColor="#ff434343"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/rate_us_tip"
                android:textColor="#ff858585"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvFiveStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/color_fever_btn_orange_style"
                android:gravity="center"
                android:text="@string/here_s_your_5_stars"
                android:textColor="#ffffffff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvFourStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="18dp"
                android:background="@drawable/color_fever_btn_fill_white_style"
                android:gravity="center"
                android:text="@string/four_stars"
                android:textColor="#ffa6a6a6"
                android:textSize="14sp" />
        </LinearLayout>
    </FrameLayout>
</FrameLayout>