<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:layout_weight="1"
        android:clipChildren="true"
        android:clipToPadding="true"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@drawable/bg_about_info_top"
                android:orientation="horizontal"
                android:padding="16dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_launcher"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginBottom="2dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/TextAppearance.Compat.Notification.Info"
                    android:textColor="@color/black"
                    android:textSize="33sp"
                    android:textStyle="bold"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1px"
                android:background="@drawable/bg_about_info_bottom"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:paddingEnd="16dp"
                        android:text="@string/info"
                        android:textColor="@color/black85"
                        android:textSize="20sp"
                        tools:ignore="MissingPrefix,RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvVersion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="0.9"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/black75" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:paddingEnd="16dp"
                        android:text="@string/ver"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/black65"
                        tools:ignore="RtlSymmetry" />

                    <TextView
                        android:id="@+id/tvBuildHash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="013c82e5"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/black75" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Build Hash"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/black65"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/tvBuildTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="InterdimensionalBoop"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/black75" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BuildTime"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/black65"
                        tools:ignore="HardcodedText" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_about_info"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingRight="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:paddingRight="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/contacts"
                        android:textColor="@color/black85"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="www.salton123.com"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                        android:textColor="@color/black75"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10sp"
                        android:text="web-size"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/black65"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:text="newsalton@163.com"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"

                        android:textColor="@color/black75"
                        android:textSize="18sp"
                        tools:ignore="MissingPrefix" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="email"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                        android:textColor="@color/black65"
                        tools:ignore="HardcodedText" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>


    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:background="@drawable/ic_close_floating" />
</LinearLayout>